concord_macros/tests/dsl/fail/fail_base_authority_at.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client BaseAuthorityAtApi {
        base "https://user@example.com"
    }
}

fn main() {}
