concord_macros/tests/dsl/fail/fail_base_authority_at.stderr
error: base URL must contain only scheme and host
 --> tests/dsl/fail/fail_base_authority_at.rs:6:14
  |
6 |         base "https://user@example.com"
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_base_authority_at.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
